--- a/index.html
+++ b/index.html
@@ -26,35 +26,244 @@
   </head>
   <body>
     <header class="header container">
-      <h1>Social Media Dashboard</h1>
-      Total Followers: 23,004
+      <div class="header__title">
+        <h1>Social Media Dashboard</h1>
+        <span class="header__subtitle">Total Followers: 23,004</span>
+      </div>
 
-      <fieldset aria-label="theme toggle" role="radiogroup">
+      <span class="header__divider"></span>
+
+      <fieldset
+        class="header__toggle toggle"
+        aria-label="theme toggle"
+        role="radiogroup"
+      >
         <label for="dark">Dark</label>
-
         <div class="toggle__wrapper">
           <input type="radio" name="theme" id="dark" />
-          <input type="radio" name="theme" id="system" checked />
           <input type="radio" name="theme" id="light" />
           <span aria-hidden="true" class="toggle__background"></span>
           <span aria-hidden="true" class="toggle__button"></span>
         </div>
-        <label for="system">System Pref</label>
         <label for="light">Light</label>
       </fieldset>
     </header>
     <main>
-      @nathanf 1987 Followers 12 Today @nathanf 1044 Followers 99 Today
-      @realnathanf 11k Followers 1099 Today Nathan F. 8239 Subscribers 144 Today
-      Overview - Today Page Views 87 3% Likes 52 2% Likes 5462 2257% Profile
-      Views 52k 1375% Retweets 117 303% Likes 507 553% Likes 107 19% Total Views
-      1407 12%
+      <section class="container cards">
+        <!-- facebook card -->
+        <div class="card card--facebook">
+          <div class="card__platform">
+            <img
+              class="card__icon card__icon--facebook"
+              src="images/icon-facebook.svg"
+              alt="facebook logo"
+            /><span class="card__username">@nathanf</span>
+          </div>
+
+          <div class="card__followers">
+            <div class="card__count card__count--big">1987</div>
+            <div class="card__label">Followers</div>
+          </div>
+
+          <div class="card__change card__change--up">
+            <img src="/images/icon-up.svg" alt="up arrow" />
+            <div class="card__number">12 Today</div>
+          </div>
+        </div>
+
+        <!-- twitter card -->
+        <div class="card card--twitter">
+          <div class="card__platform">
+            <img
+              class="card__icon card__icon--twitter"
+              src="images/icon-twitter.svg"
+              alt="twitter logo"
+            /><span class="card__username">@nathanf</span>
+          </div>
+
+          <div class="card__followers">
+            <div class="card__count card__count--big">1044</div>
+            <div class="card__label">Followers</div>
+          </div>
+
+          <div class="card__change card__change--up">
+            <img src="/images/icon-up.svg" alt="up arrow" />
+            <div class="card__number">99 Today</div>
+          </div>
+        </div>
+
+        <!-- instagram card -->
+        <div class="card card--instagram">
+          <div class="card__platform">
+            <img
+              class="card__icon card__icon--instagram"
+              src="images/icon-instagram.svg"
+              alt="instagram logo"
+            /><span class="card__username">@realnathanf</span>
+          </div>
+
+          <div class="card__followers">
+            <div class="card__count card__count--big">11k</div>
+            <div class="card__label">Followers</div>
+          </div>
+
+          <div class="card__change card__change--up">
+            <img src="/images/icon-up.svg" alt="up arrow" />
+            <div class="card__number">1099 Today</div>
+          </div>
+        </div>
+
+        <!-- youtube card -->
+        <div class="card card--youtube">
+          <div class="card__platform">
+            <img
+              class="card__icon card__icon--youtube"
+              src="images/icon-youtube.svg"
+              alt="youtube logo"
+            /><span class="card__username">Nathan F.</span>
+          </div>
+
+          <div class="card__followers">
+            <div class="card__count card__count--big">8239</div>
+            <div class="card__label">Followers</div>
+          </div>
+
+          <div class="card__change card__change--down">
+            <img src="/images/icon-down.svg" alt="down arrow" />
+            <div class="card__number">144 Today</div>
+          </div>
+        </div>
+      </section>
+
+      <section class="container cards">
+        <h2 class="subtitle">Overview - Today</h2>
+
+        <div class="card card2">
+          <div class="card2__description">Page Views</div>
+          <img
+            class="card__icon card2__icon card__icon--facebook"
+            src="images/icon-facebook.svg"
+            alt="facebook logo"
+          />
+          <div class="card__count card2__count">87</div>
+
+          <div class="card__change card2__change card__change--up">
+            <img src="/images/icon-up.svg" alt="up arrow" />
+            <div class="card__number">3%</div>
+          </div>
+        </div>
+
+        <div class="card card2">
+          <div class="card2__description">Likes</div>
+          <img
+            class="card__icon card2__icon card__icon--facebook"
+            src="images/icon-facebook.svg"
+            alt="facebook logo"
+          />
+          <div class="card__count card2__count">52</div>
+
+          <div class="card__change card2__change card__change--down">
+            <img src="/images/icon-down.svg" alt="down arrow" />
+            <div class="card__number">2%</div>
+          </div>
+        </div>
+
+        <div class="card card2">
+          <div class="card2__description">Likes</div>
+          <img
+            class="card__icon card2__icon card__icon--instagram"
+            src="images/icon-instagram.svg"
+            alt="instagram logo"
+          />
+          <div class="card__count card2__count">5462</div>
+
+          <div class="card__change card2__change card__change--up">
+            <img src="/images/icon-up.svg" alt="up arrow" />
+            <div class="card__number">2257%</div>
+          </div>
+        </div>
+
+        <div class="card card2">
+          <div class="card2__description">Profile Views</div>
+          <img
+            class="card__icon card2__icon card__icon--instagram"
+            src="images/icon-instagram.svg"
+            alt="instagram logo"
+          />
+          <div class="card__count card2__count">52k</div>
+
+          <div class="card__change card2__change card__change--up">
+            <img src="/images/icon-up.svg" alt="up arrow" />
+            <div class="card__number">1375%</div>
+          </div>
+        </div>
+
+        <div class="card card2">
+          <div class="card2__description">Retweets</div>
+          <img
+            class="card__icon card2__icon card__icon--twitter"
+            src="images/icon-twitter.svg"
+            alt="twitter logo"
+          />
+          <div class="card__count card2__count">117</div>
+
+          <div class="card__change card2__change card__change--up">
+            <img src="/images/icon-up.svg" alt="up arrow" />
+            <div class="card__number">303%</div>
+          </div>
+        </div>
+
+        <div class="card card2">
+          <div class="card2__description">Likes</div>
+          <img
+            class="card__icon card2__icon card__icon--twitter"
+            src="images/icon-twitter.svg"
+            alt="twitter logo"
+          />
+          <div class="card__count card2__count">507</div>
+
+          <div class="card__change card2__change card__change--up">
+            <img src="/images/icon-up.svg" alt="up arrow" />
+            <div class="card__number">553%</div>
+          </div>
+        </div>
+
+        <div class="card card2">
+          <div class="card2__description">Likes</div>
+          <img
+            class="card__icon card2__icon card__icon--youtube"
+            src="images/icon-youtube.svg"
+            alt="youtube logo"
+          />
+          <div class="card__count card2__count">107</div>
+
+          <div class="card__change card2__change card__change--down">
+            <img src="/images/icon-down.svg" alt="down arrow" />
+            <div class="card__number">19%</div>
+          </div>
+        </div>
+
+        <div class="card card2">
+          <div class="card2__description">Total Views</div>
+          <img
+            class="card__icon card2__icon card__icon--youtube"
+            src="images/icon-youtube.svg"
+            alt="youtube logo"
+          />
+          <div class="card__count card2__count">1407</div>
+
+          <div class="card__change card2__change card__change--down">
+            <img src="/images/icon-down.svg" alt="down arrow" />
+            <div class="card__number">12%</div>
+          </div>
+        </div>
+      </section>
     </main>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Miszti Janos</a>.
     </div>
   </body>
 </html>
