--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <label for="dark">Dark</label>
         <div class="toggle__wrapper">
           <input type="radio" name="theme" id="dark" />
-          <input type="radio" name="theme" id="light" />
+          <input type="radio" name="theme" id="light" checked />
           <span aria-hidden="true" class="toggle__background"></span>
           <span aria-hidden="true" class="toggle__button"></span>
         </div>
